updated ocpp registration
